content/riak/ts/1.4.0/using/core-fundamentals.md
---
title: "Riak Core Fundamentals"
description: "The fundamentals of Riak core in TS"
menu:
  riak_ts-1.4.0:
    name: "Core Fundamentals"
    identifier: "core_fundamentals_riakts"
    weight: 100
    parent: "using"
project: "riak_ts"
project_version: "1.4.0"
lastmod: 2016-08-24T00:00:00-00:00
sitemap:
  priority: 0.1
toc: true
version_history:
  in: "1.4.0+"
aliases:
    - /riakts/1.4.0/using/core-fundamentals/
---

[Riak KV]: {{<baseurl>}}riak/kv/2.1.4/

Riak TS shares the same core codebase as [Riak KV], which allows you to operate a TS cluster much the same as you would operate a KV cluster. Below are some links to help you get started.

### Configuration

<a href="{{<baseurl>}}riak/kv/2.1.4/configuring/basic/" target="_blank">Basic Configuration</a> will help you set up your Riak core configuration.

<a href="{{<baseurl>}}riak/kv/2.1.4/configuring/managing/" target="_blank">Managing Configuration</a> will show you how to retrieve your configuration, check your settings, and debug your configuration.

<a href="{{<baseurl>}}riak/kv/2.1.4/configuring/reference/" target="_blank">Configuration Reference</a> provides you with everything you need to know about configuring Riak core.

<a href="{{<baseurl>}}riak/kv/2.1.4/configuring/load-balancing-proxy/" target="_blank">Load Balancing</a> will walk you through configuring a load balancer with your Riak cluster.

### Cluster Operations

<a href="{{<baseurl>}}riak/kv/2.1.4/using/running-a-cluster/" target="_blank">Running a Cluster</a> gives you a basic walkthrough of how to run a Riak cluster.

<a href="{{<baseurl>}}riak/kv/2.1.4/using/admin/" target="_blank">Cluster Administration</a> provides a series of links to information on various ways to administer your cluster.

<a href="{{<baseurl>}}riak/kv/2.1.4/using/cluster-operations/adding-removing-nodes/" target="_blank">Adding & Removing Nodes</a> walks you through the process of adding or removing nodes in your cluster.

<a href="{{<baseurl>}}riak/kv/2.1.4/using/cluster-operations/changing-cluster-info/" target="_blank">Changing Cluster Information</a> will show you how to change various parts of your cluster.

<a href="{{<baseurl>}}riak/kv/2.1.4/using/cluster-operations/replacing-node/" target="_blank">Replace a Node</a> is a step-by-step guide for how to replace a node in your cluster.

<a href="{{<baseurl>}}riak/kv/2.1.4/using/cluster-operations/inspecting-node/" target="_blank">Inspect a Node</a> shows you the steps and tools for inspecting nodes in your cluster.

<a href="{{<baseurl>}}riak/kv/2.1.4/using/cluster-operations/logging/" target="_blank">Logging</a> will provide you the steps for enabling and disabling debug logging.

<a href="{{<baseurl>}}riak/kv/2.1.4/using/cluster-operations/backing-up/" target="_blank">Backing Up</a> is a how-to guide for backing up your data.

<a href="{{<baseurl>}}riak/kv/2.1.4/using/cluster-operations/handoff/" target="_blank">Handoff</a> will tell you everything you need to know to enable and disable handoff.

### Repair, Tuning, and Reference

<a href="{{<baseurl>}}riak/kv/2.1.4/using/repair-recovery/" target="_blank">Repair & Recovery</a> will cover all of the important topics of what can go wrong and what you can do to fix it.

<a href="{{<baseurl>}}riak/kv/2.1.4/using/performance/" target="_blank">Performance</a> will give you all the information you need to tune your cluster configurations to optimize performance.

<a href="{{<baseurl>}}riak/kv/2.1.4/using/reference/" target="_blank">Reference</a> will provide you with explanations of various core functions, such as logging, handoff, and monitoring.
